// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Database automatically generated schema should match snapshot: meal 1`] = `
"CREATE TABLE \\"meal\\" (
  \\"id\\" integer PRIMARY KEY AUTOINCREMENT NOT NULL,
  \\"name\\" varchar NOT NULL,
  \\"date\\" text NOT NULL DEFAULT (CURRENT_TIMESTAMP),
  \\"userId\\" integer,
  \\"macroCarbs\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"macroProts\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"macroFats\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"macroKcal\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"macroFattyacids\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"macroSugars\\" decimal(6, 2) NOT NULL DEFAULT (0),
  CONSTRAINT \\"FK_419ad998c5e3b37a7cce0f872f5\\" FOREIGN KEY (\\"userId\\") REFERENCES \\"user\\" (\\"id\\") ON DELETE NO ACTION ON UPDATE NO ACTION
)"
`;

exports[`Database automatically generated schema should match snapshot: meal_product 1`] = `
"CREATE TABLE \\"meal_product\\" (
  \\"mealId\\" integer NOT NULL,
  \\"productId\\" integer NOT NULL,
  \\"quantity\\" decimal(4, 1) NOT NULL,
  CONSTRAINT \\"FK_ad97c8c16a4ff39daaf8f464279\\" FOREIGN KEY (\\"mealId\\") REFERENCES \\"meal\\" (\\"id\\") ON DELETE CASCADE ON UPDATE NO ACTION,
  CONSTRAINT \\"FK_769d3e5caceede515715277c784\\" FOREIGN KEY (\\"productId\\") REFERENCES \\"product\\" (\\"id\\") ON DELETE NO ACTION ON UPDATE NO ACTION,
  PRIMARY KEY (\\"mealId\\", \\"productId\\")
)"
`;

exports[`Database automatically generated schema should match snapshot: product 1`] = `
"CREATE TABLE \\"product\\" (
  \\"id\\" integer PRIMARY KEY AUTOINCREMENT NOT NULL,
  \\"name\\" varchar NOT NULL,
  \\"barcode\\" text,
  \\"unit\\" text NOT NULL DEFAULT ('g'),
  \\"brand\\" text,
  \\"producer\\" text,
  \\"createdAt\\" text NOT NULL DEFAULT (CURRENT_TIMESTAMP),
  \\"updatedAt\\" text NOT NULL DEFAULT (CURRENT_TIMESTAMP),
  \\"isVerified\\" boolean,
  \\"userId\\" integer,
  \\"macroCarbs\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"macroProts\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"macroFats\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"macroKcal\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"macroFattyacids\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"macroSugars\\" decimal(6, 2) NOT NULL DEFAULT (0),
  CONSTRAINT \\"UQ_3e46cda47a776b779fa6faaed10\\" UNIQUE (\\"barcode\\", \\"isVerified\\"),
  CONSTRAINT \\"UQ_c1dd1975fe160d2190161668c52\\" UNIQUE (\\"barcode\\", \\"userId\\"),
  CONSTRAINT \\"UQ_905c0fed2f9ceb88491e43331ec\\" UNIQUE (\\"name\\", \\"isVerified\\"),
  CONSTRAINT \\"CHK_fc8bb6dce3ee11546ec5f9d2bb\\" CHECK (\\"unit\\" IN ('g', 'ml')),
  CONSTRAINT \\"FK_329b8ae12068b23da547d3b4798\\" FOREIGN KEY (\\"userId\\") REFERENCES \\"user\\" (\\"id\\") ON DELETE NO ACTION ON UPDATE NO ACTION
)"
`;

exports[`Database automatically generated schema should match snapshot: product_favorites 1`] = `
"CREATE TABLE \\"product_favorites\\" (
  \\"id\\" integer PRIMARY KEY AUTOINCREMENT NOT NULL,
  \\"productId\\" integer NOT NULL,
  \\"userId\\" integer NOT NULL,
  CONSTRAINT \\"productId_userId\\" UNIQUE (\\"productId\\", \\"userId\\"),
  CONSTRAINT \\"FK_9e77761f6faae49a6cb68182f1a\\" FOREIGN KEY (\\"productId\\") REFERENCES \\"product\\" (\\"id\\") ON DELETE NO ACTION ON UPDATE NO ACTION,
  CONSTRAINT \\"FK_9599d7698cbd231acf287d7c563\\" FOREIGN KEY (\\"userId\\") REFERENCES \\"user\\" (\\"id\\") ON DELETE NO ACTION ON UPDATE NO ACTION
)"
`;

exports[`Database automatically generated schema should match snapshot: product_images 1`] = `
"CREATE TABLE \\"product_images\\" (
  \\"id\\" integer PRIMARY KEY AUTOINCREMENT NOT NULL,
  \\"url\\" varchar NOT NULL,
  \\"productId\\" integer NOT NULL,
  CONSTRAINT \\"UQ_9fc901c53aea752d77b5392c012\\" UNIQUE (\\"url\\", \\"productId\\"),
  CONSTRAINT \\"FK_b367708bf720c8dd62fc6833161\\" FOREIGN KEY (\\"productId\\") REFERENCES \\"product\\" (\\"id\\") ON DELETE CASCADE ON UPDATE NO ACTION
)"
`;

exports[`Database automatically generated schema should match snapshot: product_portions 1`] = `
"CREATE TABLE \\"product_portions\\" (
  \\"productId\\" integer NOT NULL,
  \\"type\\" varchar NOT NULL,
  \\"value\\" integer NOT NULL,
  CONSTRAINT \\"UQ_422bab5f9d32229ab5eec6f1631\\" UNIQUE (\\"productId\\", \\"type\\"),
  CONSTRAINT \\"FK_03c8a652a50d45ef2abcda1db18\\" FOREIGN KEY (\\"productId\\") REFERENCES \\"product\\" (\\"id\\") ON DELETE CASCADE ON UPDATE NO ACTION,
  PRIMARY KEY (\\"productId\\", \\"type\\")
)"
`;

exports[`Database automatically generated schema should match snapshot: profile 1`] = `
"CREATE TABLE \\"profile\\" (
  \\"id\\" integer PRIMARY KEY AUTOINCREMENT NOT NULL,
  \\"weight\\" tinyint NOT NULL,
  \\"height\\" tinyint NOT NULL,
  \\"age\\" tinyint NOT NULL,
  \\"male\\" boolean NOT NULL,
  \\"weightGoal\\" text NOT NULL,
  \\"userId\\" integer NOT NULL,
  \\"macroNeedsCarbs\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"macroNeedsProts\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"macroNeedsFats\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"macroNeedsKcal\\" decimal(6, 2) NOT NULL DEFAULT (0),
  CONSTRAINT \\"REL_a24972ebd73b106250713dcddd\\" UNIQUE (\\"userId\\"),
  CONSTRAINT \\"CHK_e13c7952dc8655e48c8f83608a\\" CHECK (
    \\"weightGoal\\" IN ('decrease', 'maintain', 'increase')
  ),
  CONSTRAINT \\"FK_a24972ebd73b106250713dcddd9\\" FOREIGN KEY (\\"userId\\") REFERENCES \\"user\\" (\\"id\\") ON DELETE NO ACTION ON UPDATE NO ACTION
)"
`;

exports[`Database automatically generated schema should match snapshot: user 1`] = `
"CREATE TABLE \\"user\\" (
  \\"id\\" integer PRIMARY KEY AUTOINCREMENT NOT NULL,
  \\"email\\" text,
  \\"login\\" varchar NOT NULL,
  \\"password\\" varchar NOT NULL,
  \\"createdAt\\" text NOT NULL DEFAULT (CURRENT_TIMESTAMP),
  \\"updatedAt\\" text NOT NULL DEFAULT (CURRENT_TIMESTAMP)
)"
`;

exports[`Database migrated schema should match snapshot: meal 1`] = `
"CREATE TABLE \\"meal\\" (
  \\"id\\" integer PRIMARY KEY AUTOINCREMENT NOT NULL,
  \\"name\\" varchar NOT NULL,
  \\"date\\" text NOT NULL DEFAULT (CURRENT_TIMESTAMP),
  \\"userId\\" integer,
  \\"macroCarbs\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"macroProts\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"macroFats\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"macroKcal\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"macroFattyacids\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"macroSugars\\" decimal(6, 2) NOT NULL DEFAULT (0),
  CONSTRAINT \\"FK_419ad998c5e3b37a7cce0f872f5\\" FOREIGN KEY (\\"userId\\") REFERENCES \\"user\\" (\\"id\\") ON DELETE NO ACTION ON UPDATE NO ACTION
)"
`;

exports[`Database migrated schema should match snapshot: meal_product 1`] = `
"CREATE TABLE \\"meal_product\\" (
  \\"mealId\\" integer NOT NULL,
  \\"productId\\" integer NOT NULL,
  \\"quantity\\" decimal(4, 1) NOT NULL,
  CONSTRAINT \\"FK_ad97c8c16a4ff39daaf8f464279\\" FOREIGN KEY (\\"mealId\\") REFERENCES \\"meal\\" (\\"id\\") ON DELETE CASCADE ON UPDATE NO ACTION,
  CONSTRAINT \\"FK_769d3e5caceede515715277c784\\" FOREIGN KEY (\\"productId\\") REFERENCES \\"product\\" (\\"id\\") ON DELETE NO ACTION ON UPDATE NO ACTION,
  PRIMARY KEY (\\"mealId\\", \\"productId\\")
)"
`;

exports[`Database migrated schema should match snapshot: product 1`] = `
"CREATE TABLE \\"product\\" (
  \\"id\\" integer PRIMARY KEY AUTOINCREMENT NOT NULL,
  \\"name\\" varchar NOT NULL,
  \\"barcode\\" text,
  \\"unit\\" text NOT NULL DEFAULT ('g'),
  \\"createdAt\\" text NOT NULL DEFAULT (CURRENT_TIMESTAMP),
  \\"updatedAt\\" text NOT NULL DEFAULT (CURRENT_TIMESTAMP),
  \\"isVerified\\" boolean,
  \\"userId\\" integer,
  \\"macroCarbs\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"macroProts\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"macroFats\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"macroKcal\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"macroFattyacids\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"macroSugars\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"brand\\" text,
  \\"producer\\" text,
  CONSTRAINT \\"UQ_3e46cda47a776b779fa6faaed10\\" UNIQUE (\\"barcode\\", \\"isVerified\\"),
  CONSTRAINT \\"UQ_c1dd1975fe160d2190161668c52\\" UNIQUE (\\"barcode\\", \\"userId\\"),
  CONSTRAINT \\"UQ_905c0fed2f9ceb88491e43331ec\\" UNIQUE (\\"name\\", \\"isVerified\\"),
  CONSTRAINT \\"CHK_fc8bb6dce3ee11546ec5f9d2bb\\" CHECK (\\"unit\\" IN ('g', 'ml')),
  CONSTRAINT \\"FK_329b8ae12068b23da547d3b4798\\" FOREIGN KEY (\\"userId\\") REFERENCES \\"user\\" (\\"id\\") ON DELETE NO ACTION ON UPDATE NO ACTION
)"
`;

exports[`Database migrated schema should match snapshot: product_favorites 1`] = `
"CREATE TABLE \\"product_favorites\\" (
  \\"id\\" integer PRIMARY KEY AUTOINCREMENT NOT NULL,
  \\"productId\\" integer NOT NULL,
  \\"userId\\" integer NOT NULL,
  CONSTRAINT \\"productId_userId\\" UNIQUE (\\"productId\\", \\"userId\\"),
  CONSTRAINT \\"FK_9e77761f6faae49a6cb68182f1a\\" FOREIGN KEY (\\"productId\\") REFERENCES \\"product\\" (\\"id\\") ON DELETE NO ACTION ON UPDATE NO ACTION,
  CONSTRAINT \\"FK_9599d7698cbd231acf287d7c563\\" FOREIGN KEY (\\"userId\\") REFERENCES \\"user\\" (\\"id\\") ON DELETE NO ACTION ON UPDATE NO ACTION
)"
`;

exports[`Database migrated schema should match snapshot: product_images 1`] = `
"CREATE TABLE \\"product_images\\" (
  \\"id\\" integer PRIMARY KEY AUTOINCREMENT NOT NULL,
  \\"url\\" varchar NOT NULL,
  \\"productId\\" integer NOT NULL,
  CONSTRAINT \\"UQ_9fc901c53aea752d77b5392c012\\" UNIQUE (\\"url\\", \\"productId\\"),
  CONSTRAINT \\"FK_b367708bf720c8dd62fc6833161\\" FOREIGN KEY (\\"productId\\") REFERENCES \\"product\\" (\\"id\\") ON DELETE CASCADE ON UPDATE NO ACTION
)"
`;

exports[`Database migrated schema should match snapshot: product_portions 1`] = `
"CREATE TABLE \\"product_portions\\" (
  \\"productId\\" integer NOT NULL,
  \\"type\\" varchar NOT NULL,
  \\"value\\" integer NOT NULL,
  CONSTRAINT \\"UQ_422bab5f9d32229ab5eec6f1631\\" UNIQUE (\\"productId\\", \\"type\\"),
  CONSTRAINT \\"FK_03c8a652a50d45ef2abcda1db18\\" FOREIGN KEY (\\"productId\\") REFERENCES \\"product\\" (\\"id\\") ON DELETE CASCADE ON UPDATE NO ACTION,
  PRIMARY KEY (\\"productId\\", \\"type\\")
)"
`;

exports[`Database migrated schema should match snapshot: profile 1`] = `
"CREATE TABLE \\"profile\\" (
  \\"id\\" integer PRIMARY KEY AUTOINCREMENT NOT NULL,
  \\"weight\\" tinyint NOT NULL,
  \\"height\\" tinyint NOT NULL,
  \\"age\\" tinyint NOT NULL,
  \\"male\\" boolean NOT NULL,
  \\"weightGoal\\" text NOT NULL,
  \\"userId\\" integer NOT NULL,
  \\"macroNeedsCarbs\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"macroNeedsProts\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"macroNeedsFats\\" decimal(6, 2) NOT NULL DEFAULT (0),
  \\"macroNeedsKcal\\" decimal(6, 2) NOT NULL DEFAULT (0),
  CONSTRAINT \\"REL_a24972ebd73b106250713dcddd\\" UNIQUE (\\"userId\\"),
  CONSTRAINT \\"CHK_e13c7952dc8655e48c8f83608a\\" CHECK (
    \\"weightGoal\\" IN ('decrease', 'maintain', 'increase')
  ),
  CONSTRAINT \\"FK_a24972ebd73b106250713dcddd9\\" FOREIGN KEY (\\"userId\\") REFERENCES \\"user\\" (\\"id\\") ON DELETE NO ACTION ON UPDATE NO ACTION
)"
`;

exports[`Database migrated schema should match snapshot: user 1`] = `
"CREATE TABLE \\"user\\" (
  \\"id\\" integer PRIMARY KEY AUTOINCREMENT NOT NULL,
  \\"email\\" text,
  \\"login\\" varchar NOT NULL,
  \\"password\\" varchar NOT NULL,
  \\"createdAt\\" text NOT NULL DEFAULT (CURRENT_TIMESTAMP),
  \\"updatedAt\\" text NOT NULL DEFAULT (CURRENT_TIMESTAMP)
)"
`;
